--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,8 @@
 BONE, CHANGES
 
-#### 0.2.2 (2009-12-??) ###############################
+#### 0.2.2 (2010-01-08) ###############################
 
+* FIXED: Bone.keys returns Array instead of String
 * CHANGE: Friendly error when no boned
 
 
