--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,15 @@
 BONE, CHANGES
 
+#### 0.3.1 (2010-12-17) ###############################
+
+* FIXED: Bone::VERSION
+
+#### 0.3.0 (2010-12-17) ###############################
+
+NOTE: This is a complete rewrite. It is not compatible
+      with previous versions. 
+      
+
 #### 0.2.6 (2010-02-20) ###############################
 
 * CHANGE: Remove hanna dependency
